# covscript-deps

./: .gitignore  CMakeLists.txt  README.md
include/covscript/import/libdll/: dll.hpp
libucontext/arch/aarch64/include/libucontext/: bits.h
libucontext/arch/sh/include/libucontext/: bits.h
